# dataset-population

./: .gitignore  README.md  pyproject.toml
.dvc/: config
data/data_man/: .gitignore  country_iso_r10.csv.dvc
data/data_task/: .gitignore  gdp_per_cap_r10.csv.dvc  pop_medium_r10.csv.dvc
src/: task_ev.py
