[tool.poetry]
name = "dataset-population"
version = "0.1.0"
description = ""
authors = ["Chen Huang <toocold@foxmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.12"
polars = "^0.20.7"
visidata = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
